--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/passport-local": "^1.0.34",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "helmet": "^5.0.2",
