--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "helmet": "^5.0.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.2",
+    "nest-winston": "^1.6.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
